--- a/.github/workflows/pa.yml
+++ b/.github/workflows/pa.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: gr2m/set-cron-schedule-action@v2
         with:
-          token: ${{ secretes.TOKEN }}
+          token: ${{ secrets.TOKEN }}
           cron: |
             */5 * * * *
           workflow: pa.yml
