--- a/.github/workflows/pa.yml
+++ b/.github/workflows/pa.yml
@@ -14,3 +14,7 @@ jobs:
             */5 * * * *
           workflow: pa.yml
           message: "jou"
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "today"
